# getplmdoc

./: .gitignore  CSP_RTM.xlsx  JSP_RTM.xlsx  LICENSE  README.md  RTM.xlsx  Techpack_RTM.xlsx  custom.activityControllerMappings.properties  custom.clientSidePluginManagerMappings.properties  pyproject.toml  read_techpack.py  retail.plugins.properties  run_all_rtm.py  script.py  update_controller_rtm.py  update_jsp_rtm.py  update_techpack_rtm.py
.claude/: settings.local.json
.github/workflows/: ci.yml
csp-rtm-sync/: README.md  SKILL.md  csp-rtm-sync.skill
csp-rtm-sync-workspace/: sync_csp2.py  sync_csp_rtm.py
csp-rtm-sync-workspace/iteration-1/eval-1-sync-existing/: eval_metadata.json
csp-rtm-sync-workspace/iteration-1/eval-2-new-entry/: eval_metadata.json
csp-rtm-sync-workspace/iteration-1/eval-3-find-orphans/: eval_metadata.json
csp-rtm-sync/scripts/: csp.py
evals/csp-rtm/: review.html
evals/csp-rtm/evals/: evals.json
evals/csp-rtm/iteration-1/: benchmark.json  benchmark.md
jsp-rtm-sync/: .gitignore  README.md  SKILL.md
jsp-rtm-sync/scripts/: jsp.py
lcs-rtm/: README.md  convert.py
properties/sample/: ProductSpecification2.properties.example  ProductSpecificationBOM2.properties.example  ProductSpecificationMeasure2.properties.example  custom.controllerAliases.properties.example  custom.urlMappings.properties.example  xyz.properties.example
ssp-rtm-sync/: README.md  ssp.py
ssp-rtm-sync/sample/: custom.lcs.plugins.properties.example
techpack-rtm-sync/: README.md  techpack.py
(+12 files in other folders)
