[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "helpmedoc"
version = "0.1.0"
description = "RTM automation suite for Windchill/PTC PLM systems"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openpyxl>=3.1.0",
]

[project.scripts]
helpmedoc = "run_all_rtm:main"

[tool.setuptools]
py-modules = ["run_all_rtm"]
